# bitstr

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
examples/: contains_u8.rs
src/: lib.rs  utf8chunks.rs
