[package]
name = "bitstr"
version = "0.1.0"
edition = "2021"
description = "BitStr is a contiguous sequence of bits in memory"
authors = ["Raphael Amorim <rapha850@gmail.com>"]
repository = "https://github.com/raphamorim/bitstr"
keywords = ["bitstring", "byte", "string", "bytestring", "str"]
license = "MPL-2.0"
categories = ["data-structures"]
documentation = "https://docs.rs/bitstr"

[dependencies]


[[example]]
name = "contains"
path = "examples/contains_u8.rs"